{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 415,
  "lineage": "844b1137-5077-a497-8220-bab0e3a5674d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "customvpc-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015e5c91033ff152d",
            "domain": "vpc",
            "id": "eipalloc-015e5c91033ff152d",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-8-46-245.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.46.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "custom-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:725241857202:loadbalancer/custom-elb",
            "availability_zones": [
              "us-west-1a",
              "us-west-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "custom-elb-590398838.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "custom-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "custom-elb",
            "security_groups": [
              "sg-017f8e3f0859890d4"
            ],
            "source_security_group": "725241857202/custom-elb-sg",
            "source_security_group_id": "sg-017f8e3f0859890d4",
            "subnets": [
              "subnet-001541adaa64afef7",
              "subnet-0a6550f263999003c"
            ],
            "tags": {
              "Name": "custom_elb"
            },
            "tags_all": {
              "Name": "custom_elb"
            },
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.custom-elb-sg",
            "aws_subnet.customvpc-public-1",
            "aws_subnet.customvpc-public-2",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customvpc-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:internet-gateway/igw-075961a7f24d5974c",
            "id": "igw-075961a7f24d5974c",
            "owner_id": "725241857202",
            "tags": {
              "Name": "customvpc-gw"
            },
            "tags_all": {
              "Name": "customvpc-gw"
            },
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "customvpc-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015e5c91033ff152d",
            "connectivity_type": "public",
            "id": "nat-0cf84206dc2eb34c7",
            "network_interface_id": "eni-0da1d8232f484eb6e",
            "private_ip": "10.0.1.251",
            "public_ip": "52.8.46.245",
            "subnet_id": "subnet-0a6550f263999003c"
          },
          "dependencies": [
            "aws_eip.customvpc-nat",
            "aws_internet_gateway.customvpc-gw",
            "aws_subnet.customvpc-public-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customvpc-private-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:route-table/rtb-0dbf8f6eca3abdab5",
            "id": "rtb-0dbf8f6eca3abdab5",
            "owner_id": "725241857202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf84206dc2eb34c7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customvpc-private-r"
            },
            "tags_all": {
              "Name": "customvpc-private-r"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.customvpc-nat",
            "aws_internet_gateway.customvpc-gw",
            "aws_nat_gateway.customvpc-nat-gw",
            "aws_subnet.customvpc-public-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customvpc-public-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:route-table/rtb-09b90a8741727b2b3",
            "id": "rtb-09b90a8741727b2b3",
            "owner_id": "725241857202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075961a7f24d5974c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customvpc-public-r"
            },
            "tags_all": {
              "Name": "customvpc-public-r"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.customvpc-gw",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customvpc-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0396fe43783869949",
            "route_table_id": "rtb-0dbf8f6eca3abdab5",
            "subnet_id": "subnet-0711975b1a030704c"
          },
          "dependencies": [
            "aws_eip.customvpc-nat",
            "aws_internet_gateway.customvpc-gw",
            "aws_nat_gateway.customvpc-nat-gw",
            "aws_route_table.customvpc-private-r",
            "aws_subnet.customvpc-private-1",
            "aws_subnet.customvpc-public-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customvpc-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097e3fb15949acf00",
            "route_table_id": "rtb-09b90a8741727b2b3",
            "subnet_id": "subnet-0a6550f263999003c"
          },
          "dependencies": [
            "aws_internet_gateway.customvpc-gw",
            "aws_route_table.customvpc-public-r",
            "aws_subnet.customvpc-public-1",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customvpc-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d3dcad8ff3d1289",
            "route_table_id": "rtb-09b90a8741727b2b3",
            "subnet_id": "subnet-001541adaa64afef7"
          },
          "dependencies": [
            "aws_internet_gateway.customvpc-gw",
            "aws_route_table.customvpc-public-r",
            "aws_subnet.customvpc-public-2",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-customvpc-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:security-group/sg-02423e37bf08611b3",
            "description": "security group that allows http connection.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02423e37bf08611b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-customvpc-http",
            "name_prefix": "",
            "owner_id": "725241857202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-customvpc-http"
            },
            "tags_all": {
              "Name": "allow-customvpc-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-customvpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:security-group/sg-05dde310472548ed2",
            "description": "security group that allows ssh connection.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dde310472548ed2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-customvpc-ssh",
            "name_prefix": "",
            "owner_id": "725241857202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-customvpc-ssh"
            },
            "tags_all": {
              "Name": "allow-customvpc-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:security-group/sg-017f8e3f0859890d4",
            "description": "security group for ELB.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017f8e3f0859890d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "custom-elb-sg",
            "name_prefix": "",
            "owner_id": "725241857202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "custom-elb-sg"
            },
            "tags_all": {
              "Name": "custom-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:security-group/sg-0486946d07cbd4577",
            "description": "security group for instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0486946d07cbd4577",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017f8e3f0859890d4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "custom-instance-sg",
            "name_prefix": "",
            "owner_id": "725241857202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "custom-instance-sg"
            },
            "tags_all": {
              "Name": "custom-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.custom-elb-sg",
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_custom_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:security-group/sg-0e6fc10c03a043f57",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e6fc10c03a043f57",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.52.0.0/16",
                  "13.56.0.0/16",
                  "13.57.0.0/16",
                  "15.177.81.0/24",
                  "18.144.0.0/15",
                  "184.169.128.0/17",
                  "184.72.0.0/18",
                  "204.236.128.0/18",
                  "216.182.236.0/23",
                  "3.101.0.0/16",
                  "3.2.41.64/26",
                  "3.5.160.0/22",
                  "35.71.117.0/24",
                  "50.18.0.0/16",
                  "52.52.0.0/15",
                  "52.8.0.0/16",
                  "52.9.0.0/16",
                  "52.94.144.0/23",
                  "52.94.248.128/28",
                  "52.94.249.80/28",
                  "52.95.246.0/24",
                  "52.95.255.96/28",
                  "54.151.0.0/17",
                  "54.153.0.0/17",
                  "54.176.0.0/15",
                  "54.183.0.0/16",
                  "54.193.0.0/16",
                  "54.215.0.0/16",
                  "54.219.0.0/16",
                  "54.241.0.0/16",
                  "54.67.0.0/16",
                  "64.252.118.0/24",
                  "64.252.119.0/24",
                  "64.252.120.0/24",
                  "64.252.121.0/24",
                  "64.252.122.0/24",
                  "64.252.123.0/24",
                  "99.151.120.0/21",
                  "99.77.132.0/24",
                  "99.77.154.0/24",
                  "99.77.251.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_custom_us_west",
            "name_prefix": "",
            "owner_id": "725241857202",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0a93e827a70f595"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ip_ranges.us_west_ip_range"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customvpc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:subnet/subnet-0711975b1a030704c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0711975b1a030704c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725241857202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customvpc-private-1"
            },
            "tags_all": {
              "Name": "customvpc-private-1"
            },
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customvpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:subnet/subnet-0a6550f263999003c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6550f263999003c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725241857202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customvpc-public-1"
            },
            "tags_all": {
              "Name": "customvpc-public-1"
            },
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customvpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:subnet/subnet-001541adaa64afef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001541adaa64afef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725241857202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customvpc-public-2"
            },
            "tags_all": {
              "Name": "customvpc-public-2"
            },
            "vpc_id": "vpc-0eac4cc12f94a2d03"
          },
          "dependencies": [
            "aws_vpc.customvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:725241857202:vpc/vpc-0eac4cc12f94a2d03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f80800738df77c37",
            "default_route_table_id": "rtb-0d4b29b41eb5a2525",
            "default_security_group_id": "sg-0104671e865d5e3d8",
            "dhcp_options_id": "dopt-06b171c7e77676b4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eac4cc12f94a2d03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4b29b41eb5a2525",
            "owner_id": "725241857202",
            "tags": {
              "Name": "customvpc"
            },
            "tags_all": {
              "Name": "customvpc"
            }
          }
        }
      ]
    }
  ]
}